--- a/src/Todo.Api/appsettings.json
+++ b/src/Todo.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=5432;Database=todo_db;Username=todo_db_dev;Password=todo_password;Pooling=true"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=todo_db;Username=todo_db_dev;Password=todo_password;Pooling=true"
   },
     "Logging": {
         "LogLevel": {
