--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -14,10 +14,26 @@ WORKDIR "/src/Todo.Api"
 RUN dotnet build "./Todo.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
+RUN apt-get update && \
+    apt-get install -y locales tzdata && \
+    locale-gen pt_BR.UTF-8 && \
+    ln -snf /usr/share/zoneinfo/America/Sao_Paulo /etc/localtime && \
+    echo "America/Sao_Paulo" > /etc/timezone
+
+ENV LANG=pt_BR.UTF-8
+ENV LC_ALL=pt_BR.UTF-8
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./Todo.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+# Configurar timezone e locale no container final
+ENV TZ=America/Sao_Paulo
+ENV LANG=pt_BR.UTF-8
+ENV LC_ALL=pt_BR.UTF-8
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
+
 ENTRYPOINT ["dotnet", "Todo.Api.dll"]
